Record and play sounds with effects

--- a/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="9il-Vd-0M6">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Record Sound View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -34,9 +35,9 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j5A-Jm-QYe">
-                                <rect key="frame" x="136" y="421" width="106" height="30"/>
-                                <state key="normal" title="Stop Recording"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j5A-Jm-QYe">
+                                <rect key="frame" x="164" y="421" width="50" height="50"/>
+                                <state key="normal" image="stopRecordingButtonImg"/>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AOC-Rv-A0u"/>
                                 </connections>
@@ -52,18 +53,155 @@
                             <constraint firstItem="bai-Hv-w0E" firstAttribute="centerX" secondItem="auF-It-YG4" secondAttribute="centerX" id="uBu-if-VB1"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="b0P-YL-21E"/>
                     <connections>
                         <outlet property="recordingLabel" destination="bai-Hv-w0E" id="KCX-ep-DMA"/>
                         <outlet property="startRecordingButton" destination="auF-It-YG4" id="VSw-D2-muX"/>
                         <outlet property="stopRecordingButton" destination="j5A-Jm-QYe" id="5Ag-7c-AhJ"/>
+                        <segue destination="xW1-8i-uTm" kind="show" identifier="stopRecording" id="1vp-SG-Kcn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+        </scene>
+        <!--Play Sounds View Controller-->
+        <scene sceneID="ddX-dC-GAu">
+            <objects>
+                <viewController id="xW1-8i-uTm" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gDe-Zn-EWl"/>
+                        <viewControllerLayoutGuide type="bottom" id="27x-CE-fyH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6nh-fj-67y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="KZJ-TE-noy">
+                                <rect key="frame" x="16" y="64" width="343" height="603"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="W9c-pm-wnw">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="151"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2UJ-aM-PY4" userLabel="SnailButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="151"/>
+                                                <state key="normal" image="snailButtonImg"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="xW1-8i-uTm" eventType="touchUpInside" id="o17-eC-g3p"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xnc-Ji-Vde" userLabel="RabbitButton">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="151"/>
+                                                <state key="normal" image="rabbitButtonImg"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="xW1-8i-uTm" eventType="touchUpInside" id="IoS-kd-4b2"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="kIt-Bm-dcV">
+                                        <rect key="frame" x="0.0" y="151" width="343" height="150.5"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oZ9-2i-6kU" userLabel="ChipmunkButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="150.5"/>
+                                                <state key="normal" image="chipmunkButtonImg"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="xW1-8i-uTm" eventType="touchUpInside" id="n5q-20-k53"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8J1-5f-C2b" userLabel="VaderButton">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="150.5"/>
+                                                <state key="normal" image="vaderButtonImg"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="xW1-8i-uTm" eventType="touchUpInside" id="e4r-Ta-cNR"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gV7-fe-VTF">
+                                        <rect key="frame" x="0.0" y="301.5" width="343" height="151"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7q-cx-OVC" userLabel="ParrotButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="171.5" height="151"/>
+                                                <state key="normal" image="parrotButtonImg"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="xW1-8i-uTm" eventType="touchUpInside" id="z0E-0H-j3b"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgH-Rv-b7b" userLabel="ReverbButton">
+                                                <rect key="frame" x="171.5" y="0.0" width="171.5" height="151"/>
+                                                <state key="normal" image="reverbButtonImg"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="xW1-8i-uTm" eventType="touchUpInside" id="iFx-J1-CaQ"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="5C8-Xs-UIu">
+                                        <rect key="frame" x="0.0" y="452.5" width="343" height="150.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pd5-cy-hqc" userLabel="StopPlaybackButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="150.5"/>
+                                                <state key="normal" image="stopRecordingButtonImg"/>
+                                                <connections>
+                                                    <action selector="stopButtonPressed:" destination="xW1-8i-uTm" eventType="touchUpInside" id="w0I-fw-v0Y"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="KZJ-TE-noy" secondAttribute="trailing" id="7X6-YN-y4P"/>
+                            <constraint firstItem="KZJ-TE-noy" firstAttribute="leading" secondItem="6nh-fj-67y" secondAttribute="leadingMargin" id="9LW-gd-FW6"/>
+                            <constraint firstItem="KZJ-TE-noy" firstAttribute="top" secondItem="gDe-Zn-EWl" secondAttribute="bottom" id="FUl-9h-UBn"/>
+                            <constraint firstItem="27x-CE-fyH" firstAttribute="top" secondItem="KZJ-TE-noy" secondAttribute="bottom" id="QYe-mS-4z4"/>
+                            <constraint firstItem="KZJ-TE-noy" firstAttribute="leading" secondItem="6nh-fj-67y" secondAttribute="leadingMargin" id="TXL-LY-Svb"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="chipmunkButton" destination="oZ9-2i-6kU" id="GGj-r2-RMB"/>
+                        <outlet property="parrotButton" destination="X7q-cx-OVC" id="UA3-3o-1v2"/>
+                        <outlet property="rabbitButton" destination="xnc-Ji-Vde" id="WH7-gQ-Bes"/>
+                        <outlet property="reverbButton" destination="dgH-Rv-b7b" id="ieg-eR-IrS"/>
+                        <outlet property="snailButton" destination="2UJ-aM-PY4" id="5gY-qf-p0o"/>
+                        <outlet property="stopButton" destination="Pd5-cy-hqc" id="h3x-fK-lZr"/>
+                        <outlet property="vaderButton" destination="8J1-5f-C2b" id="QUj-r0-WPB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VCx-g9-osm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1985" y="139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jrl-Di-gMk">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9il-Vd-0M6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RuW-mA-eKN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="qrB-uh-t5U"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DrI-KQ-Tsz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
     <resources>
+        <image name="chipmunkButtonImg" width="100" height="100"/>
+        <image name="parrotButtonImg" width="80" height="80"/>
+        <image name="rabbitButtonImg" width="100" height="100"/>
         <image name="recordButtonImg" width="100" height="100"/>
+        <image name="reverbButtonImg" width="80" height="80"/>
+        <image name="snailButtonImg" width="100" height="100"/>
+        <image name="stopRecordingButtonImg" width="50" height="50"/>
+        <image name="vaderButtonImg" width="100" height="100"/>
     </resources>
 </document>
